--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </ul>
             </header>
             <div class="content">
-                <h1>avatar</h1>
+                <h1>rohayem</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, quia. Officia tempore dolores autem magnam minus incidunt doloribus voluptas nisi sed iste iusto quasi eum quia facilis, in est! Illo.</p>
                 <button>click here</button>
             </div>
