--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <div class="container">
-            <header>
-                <a href="#">avatar</a>
-                <ul>
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">clans</a></li>
-                    <li><a href="#">videos</a></li>
-                    <li><a href="#">photos</a></li>
-                    <li><a href="#">about</a></li>
-                </ul>
-            </header>
-            <div class="content">
-                <h1>rohayem</h1>
-                <audio src="bahgat.mp3" controls></audio>
-                <audio src="Can-You-Hear-The-Music.mp3" controls></audio>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, quia. Officia tempore dolores autem magnam minus incidunt doloribus voluptas nisi sed iste iusto quasi eum quia facilis, in est! Illo.</p>
-                <button>click here</button>
+    <div class="card">
+        <header>
+            <a href="" class="logo">adidas</a>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">men</a></li>
+                <li><a href="#">women</a></li>
+                <li><a href="#">kids</a></li>
+            </ul>
+        </header>
+        <div class="content">
+            <div class="text">
+                <!--  -->
+                <button class="play">play</button>
+                <button class="open-camera">open camera</button>
+                <video  controls class="vid1" ></video>
+                <video  controls class="vid2"></video>
+                <h1 class="h1">adidas egypt<br>,running shoes</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis eos ratione explicabo omnis magnam molestias.</p>
+            </div>
+            <div class="image">
+                <img src="./images/shoes.png" alt="" srcset="">
             </div>
         </div>
+        
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
